--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+server:
+  port: 8081
 spring:
   jpa:
     database-platform: org.hibernate.dialect.MySQLDialect
@@ -8,5 +10,5 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/mylifegraph?useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
     username: root
-    password: 12345
+    password: expo1234
     driver-class-name: com.mysql.cj.jdbc.Driver
