--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,5 +10,5 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/mylifegraph?useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
     username: root
-    password: expo1234
+    password: 12345
     driver-class-name: com.mysql.cj.jdbc.Driver
