--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,10 @@
 server:
-  port: 8081
+  port: 9000
+  ssl:
+    key-store: classpath:keystore.p12
+    key-store-password: ${SSL_KEY_PASSWORD}
+    key-store-type: PKCS12
+    key-alias: myalias
 spring:
   jpa:
     database-platform: org.hibernate.dialect.MySQLDialect
